0032092: Visualization, TKService - Image_VideoRecorder writes garbage from Grayscale image

Image_VideoRecorder::writeVideoFrame(), added protection from API misuse.